added first card layout

--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <html>
 	<head>
+		<!-- Compiled and minified CSS -->
+	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	  <!-- Compiled and minified JavaScript -->
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 		<title>Astrogata</title>
 	</head>
 	<body>
-		<h2>Astrogata's Webpage</h2>
 		<br>
-		<p>In construction...</p>
+		<div style="width:50%">
+
+			<div class="col s6 m3">
+    	<h2 class="header">Astrogata's Webpage</h2>
+	    <div class="card horizontal">
+	      <div class="card-image">
+	        <img src="img/astrogata.jpg">
+	      </div>
+	      <div class="card-stacked">
+	        <div class="card-content">
+	          <p>This is Astrogata's webpage!</p>
+						<p>It is still in construction so please be patient meow!</p>
+	        </div>
+	        <div class="card-action">
+	          <a href="#">Ron Ron</a>
+						<a href="#">Meow! Meow!</a>
+	        </div>
+	      </div>
+	    </div>
+  	</div>
+	</div>
 	</body>
 </html>
