modified page layout
Modified page layout (centered card and   added functionality to buttons)

--- a/index.html
+++ b/index.html
@@ -1,33 +1,34 @@
 <html>
-	<head>
-		<!-- Compiled and minified CSS -->
-	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	  <!-- Compiled and minified JavaScript -->
-  	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-		<title>Astrogata</title>
-	</head>
-	<body>
-		<br>
-		<div style="width:50%">
-
-			<div class="col s6 m3">
-    	<h2 class="header">Astrogata's Webpage</h2>
-	    <div class="card horizontal">
-	      <div class="card-image">
-	        <img src="img/astrogata.jpg">
-	      </div>
-	      <div class="card-stacked">
-	        <div class="card-content">
-	          <p>This is Astrogata's webpage!</p>
-						<p>It is still in construction so please be patient meow!</p>
-	        </div>
-	        <div class="card-action">
-	          <a href="#">Ron Ron</a>
-						<a href="#">Meow! Meow!</a>
-	        </div>
-	      </div>
-	    </div>
-  	</div>
+<head>
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+	<title>Astrogata</title>
+</head>
+<body>
+	<div style="width:50%; margin-left:auto; margin-right:auto">
+	<div class="col s12 m7">
+		<h2 class="header">Astrogata's Webpage</h2>
+		<div class="card horizontal">
+			<div class="card-image">
+				<img class="circle responsive-img" src="img/astrogata.jpg"/>
+			</div>
+			<div class="card-stacked">
+				<div class="card-content">
+					<p>This is Astrogata's webpage!</p>
+					<br>
+					<p>It is still in construction so please be patient meow!</p>
+				</div>
+				<div class="card-action">
+					<a class="waves-effect waves-light btn" onclick="Materialize.toast('Ron ron ron...', 4000)">Ron ron me</a>
+					<a class="waves-effect waves-light btn" onclick="Materialize.toast('Meow meow!!!', 4000)">Meow me</a>
+				</div>
+			</div>
+		</div>
 	</div>
-	</body>
+</div>
+</div>
+</body>
 </html>
